Docker VM K8s/k8s/argocd/deploy/myweb.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: my-web
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myweb
  name: myweb
  namespace: my-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myweb
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: configmap-volume
        configMap:
          name: myweb-configmap

status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myweb
  namespace: my-web
spec:
  rules:
  - host: myweb.home.lan
    http:
      paths:
      - backend:
          service:
            name: myweb
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myweb
  name: myweb
  namespace: my-web
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
  type: ClusterIP
status:
  loadBalancer: {}
